# Projeto-Algebra-Linear

./: .gitignore  CMakeLists.txt  README.md  autovalores_vetores.c  autovalores_vetores.h  det_bases.c  det_bases.h  diagonalizacao_matriz.c  diagonalizacao_matriz.h  main.c  sis_lineares.c  sis_lineares.h  struct_matriz.c  struct_matriz.h  telas.c  telas.h  telas_menu.txt  testando  transformacoes.c  transformacoes.h
